--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.21.2",
     "express-async-errors": "^3.1.1",
     "express-session": "^1.18.1",
+    "glob": "^11.0.1",
     "google-auth-library": "^9.15.1",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
@@ -33,6 +34,7 @@
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "reflect-metadata": "^0.2.2",
+    "rimraf": "^6.0.1",
     "typescript": "^5.7.3",
     "zod": "^3.24.2"
   },
