--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "start": "node dist/server.js",
     "migrate:dev": "dotenv -e .env.develop -- npx prisma migrate dev",
     "studio:env": "dotenv -e .env.develop -- npx prisma studio",
-    "migrate:deploy": "npx prisma migrate deploy",
-    "deploy": "yarn migrate:deploy && yarn start"
+    "migrate:deploy": "npx prisma migrate deploy"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +19,11 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
+
+
+
+
+    
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
